--- a/SCORE-APP/style.css
+++ b/SCORE-APP/style.css
@@ -53,12 +53,16 @@ h1{
       font-size: 40px;
       color: #fff;
       font-weight: bold;
+      margin: 15%;
+      margin-left: 20%;
   }
 
 .Manchester p{
       font-size: 40px;
       color: #fff;
       font-weight: bold;
+      margin-left: 20%;
+      margin-bottom: 30%;
   }
 
 h2{
