--- a/SCORE-APP/style.css
+++ b/SCORE-APP/style.css
@@ -43,17 +43,31 @@ h1{
   .Arsenal button{
       padding: 3.5%;
       font-weight: bolder;
+      margin: 15%;
+      margin-bottom: 15%;
   }
   .Manchester button{
     padding: 5%;
     font-weight: bolder;
+    margin-bottom: 5%;
 }
 
-  p{
-      font-size: 40px;
-      color: #fff;
-      font-weight: bold;
-  }
+.Arsenal p{
+  font-size: 40px;
+  color: #fff;
+  font-weight: bold;
+  margin: 5%;
+  margin-left: 20%;
+}
+.Manchester p{
+font-size: 40px;
+color: #fff;
+font-weight:bold;
+margin-bottom: 30%;
+margin-left: 20%;
+}
+
+
 h2{
     color: #fff;
     font-weight: bold;
