--- a/SCORE-APP/style.css
+++ b/SCORE-APP/style.css
@@ -105,3 +105,19 @@ h2{
     font-weight: bolder;
 }
 
+p4{
+  background-color:white;
+  display: inline-flex;
+  height: 70px;
+  width: 200px
+  
+}
+
+#countdown{
+  font-size: 50px;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  font-weight: bold;
+}
+
