--- a/TO-DO-LIST/to-do.css
+++ b/TO-DO-LIST/to-do.css
@@ -77,10 +77,11 @@ ul li.checked::before {
     border-radius: 0;
     margin: 0;
   position: absolute;
-  top: 13.3%;
+  top: 15.0%;
   -ms-transform: translateY(-5%);
   transform: translateY(-5%);
   margin-right: 50%;
+  padding-right: -5%;
   }
 
   .addBtn:hover {
